[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/PlayerAssets/TankAssets/panzerpng1.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player/BossPlayer.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 90 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 92 )

[node name="BossPlayer" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 31 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RightButton" type="TouchScreenButton" parent="CanvasLayer"]
visible = false
position = Vector2( 192, 512 )
normal = ExtResource( 2 )

[node name="LeftButton" type="TouchScreenButton" parent="CanvasLayer"]
visible = false
position = Vector2( 64, 512 )
normal = ExtResource( 2 )

[node name="FireButton" type="TouchScreenButton" parent="CanvasLayer"]
visible = false
position = Vector2( 1088, 512 )
normal = ExtResource( 2 )

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( 0, -118 )

[node name="BossPlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossPlayerArea"]
position = Vector2( 0, 28 )
shape = SubResource( 2 )

[node name="MissileExplosionPosition" type="Position2D" parent="."]
position = Vector2( 8, -72 )

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="CanvasLayer/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="released" from="CanvasLayer/RightButton" to="." method="_on_RightButton_released"]
[connection signal="pressed" from="CanvasLayer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="released" from="CanvasLayer/LeftButton" to="." method="_on_LeftButton_released"]
[connection signal="pressed" from="CanvasLayer/FireButton" to="." method="_on_FireButton_pressed"]
[connection signal="area_entered" from="BossPlayerArea" to="." method="_on_BossPlayerArea_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
